# Tkinter-Designer

./: pyproject.toml  requirements.txt
